# IPC

./: README.md
IPC/: CMakeLists.txt  README.md  package.xml
IPC/config/: env.rviz  env_real.rviz  fast_obs.rviz  param.yaml  param_avoid.yaml  param_real.yaml  time_consuming.csv
IPC/include/: astar.cpp  astar.h  local_astar.cpp  local_astar.h  mpc.cpp  mpc.h
IPC/include/polytope/: common_type_name.hpp  ellipsoid.hpp  emvp.hpp  geo_utils.hpp  line_segment.hpp  polytope.hpp  quickhull.hpp
IPC/launch/: fast_avoid.launch  ipc.launch  ipc_avoid.launch  ipc_real.launch
IPC/src/: main.cpp  mycsv.py  planner.cpp  planner.h
IPC/test/: fast_avoid.cpp
mars_uav_sim/: .gitignore  README.md
mars_uav_sim/mars_quadrotor_msgs/msg/: TrakingPerformance.msg
mars_uav_sim/perfect_drone_sim/: CMakeLists.txt  package.xml
mars_uav_sim/perfect_drone_sim/include/perfect_drone_sim/: perfect_drone_model.hpp
mars_uav_sim/perfect_drone_sim/src/: perfect_drone.cpp
mars_uav_sim/test_interface/: CMakeLists.txt  package.xml
mars_uav_sim/test_interface/config/: default.rviz  depth_grid_cfg.yaml  fpv.rviz  map_bubble.yaml  map_complex.yaml  map_faster.yaml  map_simple.yaml  map_uzh.yaml  map_wall.yaml  poly_planner.rviz  racing_map_config.yaml  random_map_config.yaml  svc_planner.rviz  traj.rviz
mars_uav_sim/test_interface/launch/: map_faster.launch  map_rc.launch  simulator.launch  simulator.xml  so3_quadrotor_sim.xml
mars_uav_sim/test_interface/src/: test_interface_node.cpp
mars_uav_sim/uav_simulator/Utils/uav_utils/: CMakeLists.txt
mars_uav_sim/uav_simulator/Utils/waypoint_generator/: CMakeLists.txt
mars_uav_sim/uav_simulator/aros_util/: CMakeLists.txt  package.xml
mars_uav_sim/uav_simulator/aros_util/include/aros_util/: transport_util.h
mars_uav_sim/uav_simulator/depth_gene/: CMakeLists.txt  package.xml
mars_uav_sim/uav_simulator/depth_gene/Apps/: depth_gene.cpp
mars_uav_sim/uav_simulator/depth_gene/config/: depth_grid_cfg.yaml
mars_uav_sim/uav_simulator/depth_gene/include/depth_gene/: depth_grid.hpp
mars_uav_sim/uav_simulator/depth_gene/launch/: depth_gene.launch
mars_uav_sim/uav_simulator/depth_gene/rviz/: default.rviz
mars_uav_sim/uav_simulator/local_sensing/: CMakeLists.txt
mars_uav_sim/uav_simulator/local_sensing/include/ikd-Tree/: ikd_Tree.h
mars_uav_sim/uav_simulator/local_sensing/src/: pointcloud_render_node.cpp
mars_uav_sim/uav_simulator/map_generator/: CMakeLists.txt  package.xml
mars_uav_sim/uav_simulator/map_generator/Apps/: color_map_for_pointcloud.cpp  dynamic_obstacle.cpp  racing_map_gene_node.cpp  random_map_gene_node.cpp
mars_uav_sim/uav_simulator/map_generator/config/: config.yaml  racing_map_config.yaml  rrt_corridor.yaml
mars_uav_sim/uav_simulator/map_generator/include/bvp/: obvp_solver.hpp
mars_uav_sim/uav_simulator/map_generator/include/racing_map_generator/: config.hpp  racing_map_generator.hpp
mars_uav_sim/uav_simulator/map_generator/include/random_map_generator/: random_map_generator.hpp
mars_uav_sim/uav_simulator/map_generator/launch/: color_map.launch  racing_map.launch  random_map.launch
mars_uav_sim/uav_simulator/map_generator/script/: export_pcd.py
mars_uav_sim/uav_simulator/map_generator/src/: map_publisher.cpp  random_forest_sensing.cpp
mars_uav_sim/uav_simulator/mockamap/: CMakeLists.txt
mars_uav_sim/uav_simulator/mockamap/config/: rviz.rviz
mars_uav_sim/uav_simulator/odom_visualization/: package.xml
mars_uav_sim/uav_simulator/odom_visualization/src/: odom_visualization.cpp
mars_uav_sim/uav_simulator/so3_controller/include/so3_controller/: so3_controller.hpp
mars_uav_sim/uav_simulator/so3_quadrotor/src/: so3_quadrotor_nodelet.cpp
