<?xml version="1.0"?>
<package format="2">
  <name>ipc</name>
  <version>0.0.0</version>
  <description>The ipc package</description>
  <maintainer email="liuwenyi@connect.hku.hk">liuwenyi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <exec_depend>quadrotor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
